--- a/index.html
+++ b/index.html
@@ -37,124 +37,7 @@
     </script>
   </head>
   <body class="m-0 p-0 h-full font-sans">
-    <!-- 지도와 UI 요소를 위한 메인 컨테이너 -->
-    <div
-      id="map-container"
-      class="absolute top-0 left-0 h-full w-full transition-all duration-300 overflow-hidden"
-    >
-      <div id="map" class="h-full w-full"></div>
-
-      <!-- 상단에 위치한 검색 요소를 위한 컨테이너 -->
-      <div
-        class="absolute top-4 left-1/2 -translate-x-1/2 z-10 w-[90%] max-w-[600px]"
-      >
-        <div
-          class="flex items-center bg-white rounded-3xl px-4 py-2 shadow-md transition-shadow hover:shadow-lg"
-        >
-          <i class="fas fa-search text-gray-500 mr-3"></i>
-          <textarea
-            id="prompt-input"
-            placeholder="어디로 여행할 계획인가요? (예: '파리 하루 여행' 또는 '제주도 일일 계획')"
-            class="flex-1 border-none outline-none text-base resize-none h-6 leading-6 bg-transparent"
-          ></textarea>
-          <button
-            id="generate"
-            class="bg-[#282828] text-white border-none rounded-full w-8 h-8 flex items-center justify-center cursor-pointer ml-3 transition-colors relative hover:bg-[#282828] group"
-          >
-            <i
-              class="fas fa-arrow-right transition-opacity group-[.loading]:opacity-0"
-            ></i>
-            <div
-              class="spinner absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-[18px] h-[18px] border-2 border-white/30 rounded-full border-t-white opacity-0 pointer-events-none transition-opacity group-[.loading]:opacity-100"
-            ></div>
-          </button>
-        </div>
-
-        <div class="text-red-500" id="error-message"></div>
-      </div>
-
-      <!-- 하단에 위치한 위치 카드를 표시하기 위한 캐러셀 -->
-      <div
-        class="absolute bottom-6 left-1/2 -translate-x-1/2 z-10 w-[90%] max-w-[900px] hidden transition-all duration-300"
-      >
-        <div
-          class="flex overflow-x-auto scroll-smooth gap-4 py-4 px-4 rounded-2xl backdrop-blur-sm bg-white/10 border border-white/20 relative scrollbar-hide"
-          id="card-container"
-        >
-          <!-- 위치 카드는 스크립트에 의해 동적으로 삽입됩니다 -->
-        </div>
-        <div class="flex justify-center items-center mt-4">
-          <button
-            class="bg-white border border-[#DDDDDD] rounded-full w-8 h-8 flex items-center justify-center cursor-pointer text-[#222222] transition-all hover:bg-[#F7F7F7] hover:shadow-md"
-            id="prev-card"
-          >
-            <i class="fas fa-chevron-left"></i>
-          </button>
-          <div class="flex mx-4" id="carousel-indicators">
-            <!-- 인디케이터 점은 동적으로 추가됩니다 -->
-          </div>
-          <button
-            class="bg-white border border-[#DDDDDD] rounded-full w-8 h-8 flex items-center justify-center cursor-pointer text-[#222222] transition-all hover:bg-[#F7F7F7] hover:shadow-md"
-            id="next-card"
-          >
-            <i class="fas fa-chevron-right"></i>
-          </button>
-        </div>
-      </div>
-
-      <!-- 지도 초기화 및 현재 결과를 지우는 버튼 -->
-      <button
-        id="reset"
-        class="absolute bottom-8 left-4 z-10 bg-white border border-[#DDDDDD] rounded-full w-12 h-12 flex items-center justify-center cursor-pointer shadow-md transition-all hover:bg-[#F7F7F7] hover:shadow-lg"
-      >
-        <i class="fas fa-undo"></i>
-      </button>
-    </div>
-
-    <!-- 모바일에서 타임라인이 열릴 때 표시되는 반투명 오버레이 -->
-    <div class="fixed inset-0 bg-black/50 z-[9] hidden" id="map-overlay"></div>
-
-    <!-- 일정 타임라인을 표시하기 위한 슬라이딩 패널 -->
-    <div
-      class="fixed top-0 right-0 w-80 h-full bg-white/98 backdrop-blur-md shadow-lg z-[1000] overflow-hidden hidden translate-x-full transition-transform duration-300"
-      id="timeline-container"
-    >
-      <!-- 모바일에서 타임라인 가시성을 토글하는 버튼 -->
-      <button
-        id="timeline-toggle"
-        class="absolute top-1/2 -translate-y-1/2 -left-10 w-10 h-10 bg-white rounded-l-lg flex items-center justify-center cursor-pointer shadow-md border border-r-0 md:hidden"
-      >
-        <i class="fas fa-calendar-alt"></i>
-      </button>
-
-      <div
-        class="p-4 flex justify-between items-center border-b border-gray-200 sticky top-0 bg-white z-[2]"
-      >
-        <h3 class="text-base font-semibold text-gray-800">일일 여행 계획</h3>
-        <div class="flex gap-2">
-          <button
-            id="export-plan"
-            class="bg-transparent border-none cursor-pointer text-sm text-gray-600 flex items-center p-1 px-2 rounded transition-colors hover:bg-gray-100 hover:text-gray-800"
-          >
-            <i class="fas fa-download mr-1"></i> 내보내기
-          </button>
-          <button
-            id="close-timeline"
-            class="bg-transparent border-none cursor-pointer text-sm text-gray-600 flex items-center p-1 px-2 rounded transition-colors hover:bg-gray-100 hover:text-gray-800"
-          >
-            <i class="fas fa-times"></i>
-          </button>
-        </div>
-      </div>
-      <div class="px-4 pb-4 overflow-y-auto h-[calc(100%-64px)]" id="timeline">
-        <!-- 일정 계획을 나타내는 타임라인 항목들이 여기에 삽입됩니다 -->
-      </div>
-    </div>
-
-    <div
-      id="spinner"
-      class="hidden fixed top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-[50px] h-[50px] border-[5px] border-black/10 border-t-[#3498db] rounded-full animate-spin-slow transition-opacity"
-    ></div>
+    <div id="root" class="h-full"></div>
 
     <!-- Google Maps JavaScript API 스크립트 -->
     <script>
