Add: Implement scrollbar hide utility and integrate CSS in index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>Interactive Map Explorer</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="./index.css" />
     <!-- Font Awesome CDN -->
     <link
       rel="stylesheet"
