--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     />
     <!-- Tailwind CSS Play CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Marked.js for markdown parsing -->
+    <script src="https://cdn.jsdelivr.net/npm/marked@9.1.6/marked.min.js"></script>
+    <!-- DOMPurify for XSS protection -->
+    <script src="https://cdn.jsdelivr.net/npm/dompurify@3.0.5/dist/purify.min.js"></script>
     <script type="importmap">
       {
         "imports": {
@@ -134,6 +138,47 @@
         }
         .map-overlay.visible {
           @apply block;
+        }
+
+        /* Markdown styling for chat messages */
+        .markdown-content h1 {
+          @apply text-lg font-bold mb-2 text-gray-800;
+        }
+        .markdown-content h2 {
+          @apply text-base font-bold mb-2 text-gray-800;
+        }
+        .markdown-content h3 {
+          @apply text-sm font-bold mb-1 text-gray-800;
+        }
+        .markdown-content p {
+          @apply mb-2 text-gray-700 leading-relaxed;
+        }
+        .markdown-content ul {
+          @apply list-disc list-inside mb-2 text-gray-700;
+        }
+        .markdown-content ol {
+          @apply list-decimal list-inside mb-2 text-gray-700;
+        }
+        .markdown-content li {
+          @apply mb-1;
+        }
+        .markdown-content strong {
+          @apply font-semibold text-gray-800;
+        }
+        .markdown-content em {
+          @apply italic;
+        }
+        .markdown-content code {
+          @apply bg-gray-200 px-1 rounded text-sm;
+        }
+        .markdown-content pre {
+          @apply bg-gray-100 p-2 rounded mb-2 text-sm overflow-x-auto;
+        }
+        .markdown-content blockquote {
+          @apply border-l-4 border-gray-300 pl-3 mb-2 text-gray-600 italic;
+        }
+        .markdown-content a {
+          @apply text-blue-600 underline;
         }
       }
     </style>
