--- a/index.html
+++ b/index.html
@@ -20,10 +20,14 @@
     <script type="importmap">
       {
         "imports": {
-          "@google/genai": "https://esm.sh/@google/genai@^0.7.0"
+          "@google/genai": "https://esm.sh/@google/genai@^0.7.0",
+          "react-dom/": "https://esm.sh/react-dom@^19.1.0/",
+          "react/": "https://esm.sh/react@^19.1.0/",
+          "react": "https://esm.sh/react@^19.1.0"
         }
       }
     </script>
+    <link rel="stylesheet" href="/index.css" />
   </head>
   <body>
     <!-- Semi-transparent overlay displayed when timeline is open on mobile -->
@@ -68,7 +72,7 @@
         d[l]
           ? console.warn(p + " only loads once. Ignoring:", g)
           : (d[l] = (f, ...n) => r.add(f) && u().then(() => d[l](f, ...n)));
-      })({ key: "AIzaSyBoJ_PjvWy-mAvldANHZGaqXQCWS6JW67w", v: "weekly" });
+      })({ key: "AIzaSyAKktpMxEVCSFw00AZb4GY4IaYV-IKYohs", v: "weekly" });
     </script>
 
     <script>
@@ -182,5 +186,6 @@
         }
       }
     </style>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
